<resources>
    <string name="app_name">Instagram</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="logo">logo</string>
    <string name="icon">icon</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_a_user_login">Already a user? LogIn</string>
</resources>